# hpcgame-pku

./: README.md
0th/: score.json
0th/1.高性能计算简介/0th_basic_intro/: problem.md
0th/1.高性能计算简介/0th_basic_qa/: answer.yaml  problem.md
0th/1.高性能计算简介/0th_basic_signin/: answer.sh  problem.md
0th/1.高性能计算简介/0th_basic_simple/: answer.cpp  problem.md
0th/2.并行与大规模/0th_parallel_convolution/: answer.cpp  problem.md
0th/2.并行与大规模/0th_parallel_omp_cgs/: answer.cpp  problem.md
0th/2.并行与大规模/0th_parallel_omp_cmul/: answer.cpp  problem.md
0th/2.并行与大规模/0th_parallel_omp_inte/: answer.cpp  problem.md
0th/2.并行与大规模/0th_parallel_pi/: answer.c  problem.md
0th/2.并行与大规模/0th_parallel_sort/: problem.md
0th/2.并行与大规模/0th_parallel_sort/answer-123-stdsort-parallel-merge/: Makefile  answer.cpp
0th/2.并行与大规模/0th_parallel_sort/answer-166-rayon/: build.sh  cargo.toml  main.rs
0th/3.GPU上的并行计算/0th_gpu_cuda_caustics/: answer-80-simplecuda.cu  problem.md
0th/3.GPU上的并行计算/0th_gpu_cuda_fft/: answer-44-cufft.cu  problem.md
0th/3.GPU上的并行计算/0th_gpu_imageclassification/: problem.md
0th/3.GPU上的并行计算/0th_gpu_imageclassification/section1/: answer-70.py
0th/4.综合应用提升/0th_integrated_aitisa/: answer-98-better-locality.h  problem.md
0th/4.综合应用提升/0th_integrated_rdma/: problem.md
0th/4.综合应用提升/0th_integrated_rdma/answer-14-nochange/: CMakeLists.txt  common.cpp  farm.cpp  farm_cons.cpp  farm_prod.cpp
0th/4.综合应用提升/0th_integrated_rdma/answer-14-nochange/cmake/Modules/: Findibverbs.cmake
0th/4.综合应用提升/0th_integrated_rdma/answer-14-nochange/include/: common.h  demo.h  farm.h
(+1 files in other folders)
